<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue">

    <TextView
        android:id="@+id/textNameEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_employee_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <TextView
        android:id="@+id/textHoursOvertime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hours_overtime"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textHoursRendered"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textHoursRendered"
        app:layout_constraintTop_toBottomOf="@+id/textHoursRendered"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textHoursRendered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hours_rendered"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textNameEmployee"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textNameEmployee"
        app:layout_constraintTop_toBottomOf="@+id/textNameEmployee"
        app:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/textWageTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_wage_total"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textWageOvertime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textWageOvertime"
        app:layout_constraintTop_toBottomOf="@+id/textWageOvertime"
        app:layout_constraintVertical_bias="0.192" />

    <TextView
        android:id="@+id/textWageOvertime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_wage_overtime"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textWageRegular"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textWageRegular"
        app:layout_constraintTop_toBottomOf="@+id/textWageRegular"
        app:layout_constraintVertical_bias="0.163" />

    <TextView
        android:id="@+id/textWageRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_wage_regular"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textHoursOvertime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textHoursOvertime"
        app:layout_constraintTop_toBottomOf="@+id/textHoursOvertime"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/textReportTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/resEmployeeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_NA"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textNameEmployee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toEndOf="@+id/textNameEmployee"
        app:layout_constraintTop_toTopOf="@+id/textNameEmployee"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resHoursR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_NA"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textHoursRendered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toEndOf="@+id/textHoursRendered"
        app:layout_constraintTop_toTopOf="@+id/textHoursRendered"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resHoursO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_NA"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textHoursOvertime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toEndOf="@+id/textHoursOvertime"
        app:layout_constraintTop_toTopOf="@+id/textHoursOvertime"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resWageR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_NA"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textWageRegular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toEndOf="@+id/textWageRegular"
        app:layout_constraintTop_toTopOf="@+id/textWageRegular"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resWageO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_NA"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textWageOvertime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toEndOf="@+id/textWageOvertime"
        app:layout_constraintTop_toTopOf="@+id/textWageOvertime"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resWageTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_NA"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textWageTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toEndOf="@+id/textWageTotal"
        app:layout_constraintTop_toTopOf="@+id/textWageTotal"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
